Digital/objects/DGTL_Floorset_Plan__c.object
<CustomObject>
    <label>Floorset/Update</label>
    <nameField>
        <label>Floorset Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Floorset/Update</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Brands__c</fullName>
        <inlineHelpText>Select the brand from the drop down: E.g. VS, PINK, Beauty, Marketplace</inlineHelpText>
        <label>Brand</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DGTL_Brands</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Layouts__c</fullName>
        <label>Layouts</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Minute__c</fullName>
        <label>Minute</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                    <default>true</default>
                    <label>00</label>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_No__c</fullName>
        <formula>IF(CONTAINS( TEXT(Time__c) , &#39;AM&#39;), 
IF(LEN(TEXT(Time__c))=5, 
IF(CONTAINS( TEXT(Time__c) , &#39;12&#39;),0,VALUE(LEFT(TEXT(Time__c),2))), 
VALUE(LEFT(TEXT(Time__c),1)) 
), 
IF(LEN(TEXT(Time__c))=5, 
VALUE(LEFT(TEXT(Time__c),2))+12, 
VALUE(LEFT(TEXT(Time__c),1))+12 
) 
) * 60 + VALUE(Text(Minute__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Hour</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12 AM</fullName>
                </value>
                <value>
                    <fullName>1 AM</fullName>
                </value>
                <value>
                    <fullName>2 AM</fullName>
                </value>
                <value>
                    <fullName>3 AM</fullName>
                </value>
                <value>
                    <fullName>4 AM</fullName>
                </value>
                <value>
                    <fullName>5 AM</fullName>
                    <default>true</default>
                    <label>5 AM</label>
                </value>
                <value>
                    <fullName>6 AM</fullName>
                </value>
                <value>
                    <fullName>7 AM</fullName>
                </value>
                <value>
                    <fullName>8 AM</fullName>
                </value>
                <value>
                    <fullName>9 AM</fullName>
                </value>
                <value>
                    <fullName>10 AM</fullName>
                </value>
                <value>
                    <fullName>11 AM</fullName>
                </value>
                <value>
                    <fullName>12 PM</fullName>
                </value>
                <value>
                    <fullName>1 PM</fullName>
                </value>
                <value>
                    <fullName>2 PM</fullName>
                </value>
                <value>
                    <fullName>3 PM</fullName>
                </value>
                <value>
                    <fullName>4 PM</fullName>
                </value>
                <value>
                    <fullName>5 PM</fullName>
                </value>
                <value>
                    <fullName>6 PM</fullName>
                </value>
                <value>
                    <fullName>7 PM</fullName>
                </value>
                <value>
                    <fullName>8 PM</fullName>
                </value>
                <value>
                    <fullName>9 PM</fullName>
                </value>
                <value>
                    <fullName>10 PM</fullName>
                </value>
                <value>
                    <fullName>11 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Floorset</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <label>Unique Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <validationRules>
        <fullName>Floorset_Should_be_Unique</fullName>
        <active>false</active>
        <errorConditionFormula>and( Name = VLOOKUP
       ($ObjectType.DGTL_Floorset_Plan__c.Fields.Name , 
        $ObjectType.DGTL_Floorset_Plan__c.Fields.Name , 
        Name ),
    not(
     Id=VLOOKUP
        ($ObjectType.DGTL_Floorset_Plan__c.Fields.Id , 
         $ObjectType.DGTL_Floorset_Plan__c.Fields.Name , 
         Name )))</errorConditionFormula>
        <errorMessage>A Floor-set/update already exists for this date/time. Please review.</errorMessage>
    </validationRules>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Date__c</columns>
        <columns>Time__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Brands__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>July_Plan</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Date__c</columns>
        <columns>Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>NEXT MONTH</label>
    </listViews>
    <listViews>
        <fullName>Marketplace_Floorset_Updates_This_Month</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Brands__c</field>
            <operation>equals</operation>
            <value>Marketplace</value>
        </filters>
        <label>Marketplace Floorset/Updates This Month</label>
    </listViews>
    <listViews>
        <fullName>THIS_MONTH</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Date__c</columns>
        <columns>Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>THIS MONTH</label>
    </listViews>
    <listViews>
        <fullName>VS_Floorset_Updates</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Date__c</columns>
        <columns>Time__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brands__c</field>
            <operation>equals</operation>
            <value>VS</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>VSL Floorset/Updates This Month</label>
    </listViews>
</CustomObject>